# argparse-cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy.yml  linux.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/in_depth/: add_argument.md  arg_objects.md  argument_parser_objects.md  parse_args.md
docs/src/in_depth/arg_methods/: as.md  count.md  names_aliases.md  set_default.md  set_flags.md  set_help.md  set_metavar.md  set_nargs.md  set_type.md
docs/src/user_guide/: basic_example.md  installation.md  running_tests.md
in_depth/: add_argument.html  argument_parser_objects.html  parse_args.html
in_depth/arg_methods/: as.html  count.html  set_default.html  set_flags.html  set_help.html  set_metavar.html  set_nargs.html  set_type.html
include/argparse/: argparse.hpp
tests/: add_argument_checks_test.cpp  argument_aliases_test.cpp  bool_argument_test.cpp  count_action_test.cpp  default_value_test.cpp  help_test.cpp  metavar_test.cpp  nargs_test.cpp  new_api_test.cpp  parse_arguments_test.cpp  passed_arguments_test.cpp  passed_arguments_tests.cpp  positional_arguments_test.cpp  required_arguments_test.cpp  version_test.cpp
user_guide/: basic_example.html  installation.html  running_tests.html
